# DIPCourse

dip1/src/image_pkg/: CMakeLists.txt  package.xml
dip1/src/image_pkg/src/: expt1_grayProcessing.cpp
dip2/: .gitignore
dip2/src/dip2/: package.xml
dip2/src/dip2/src/: dip2_node.cpp
dip3/src/dip3/: CMakeLists.txt  package.xml
dip3/src/dip3/src/: CMakeLists.txt.bak  dip3_node.cpp  temp.cpp
dip4/src/dip4/: CMakeLists.txt  package.xml
dip4/src/dip4/src/: dip4_node.cpp
dip4_none_ros/: .gitignore  CMakeLists.txt  main.cpp
dip_proj/: .gitignore  CMakeLists.txt  color_split.cpp  color_split.hpp  dip_process.cpp  dip_process.hpp  line_detect.cpp  line_detect.hpp  main.cpp  pill_detect.cpp  pill_detect.hpp
dip_proj_ros/src/dip_proj_pkg/: .gitignore  CMakeLists.txt  package.xml
dip_proj_ros/src/dip_proj_pkg/include/: color_split.hpp  cv_thread.hpp  dip_process.hpp  line_detect.hpp  pid_calc.hpp  pill_detect.hpp
dip_proj_ros/src/dip_proj_pkg/msg/: dip_process.msg  pid_driver.msg
dip_proj_ros/src/dip_proj_pkg/src/: color_split.cpp  cv_thread.cpp  dip_process.cpp  line_detect.cpp  main.cpp  pid_calc.cpp  pill_detect.cpp
src/image_pkg/: CMakeLists.txt
